# last-layer-inf

./: README.md  pyproject.toml  vi_test.ipynb
src/: 1d_regression.ipynb  1d_regression_plot.ipynb  gaussian_posterior.ipynb  hmc_horseshoe.ipynb  hyperpriors_for_tausq.ipynb  prior_var_influence.ipynb  run_models.py  run_models.sh  sg_mcmc.ipynb  vi.ipynb  vi_closed.ipynb  vi_ridge.ipynb
src/last_layer_inf/: 1d_regression.ipynb  gaussian_posterior.ipynb  gibbs_sampler.ipynb  gibbs_sampler.py  gp.ipynb  hyperpriors_for_tausq.ipynb  polynomial.ipynb  sg_mcmc.ipynb  sg_mcmc.py
src/models/: bnn.py  gibbs_sampler.py  hmc.py  last_layer_models.py  mc_dropout.py  sg_mcmc.py  vi.py
src/results/: bnn_checkpoint.t7  bnn_concretecheckpoint.t7  bnn_syntheticcheckpoint.t7  concrete_data.npz  lli_closed_form_checkpoint.t7  lli_closed_form_concrete_checkpoint.t7  lli_closed_form_synthetic_checkpoint.t7  lli_vi_closed_full_cov_checkpoint.t7  mc_dropout_checkpoint.t7  mc_dropout_concretecheckpoint.t7  mc_dropout_syntheticcheckpoint.t7  out_dict_bnn.pkl  out_dict_bnn_concrete.pkl  out_dict_bnn_synthetic.pkl  out_dict_lli_closed_form.pkl  out_dict_lli_closed_form_concrete.pkl  out_dict_lli_closed_form_synthetic.pkl  out_dict_lli_gibbs_ridge.pkl  out_dict_lli_gibbs_ridge_concrete.pkl  out_dict_lli_gibbs_ridge_synthetic.pkl  out_dict_lli_hmc_horseshoe_concrete.pkl  out_dict_lli_hmc_horseshoe_synthetic.pkl  out_dict_lli_vi_closed_form.pkl  out_dict_lli_vi_closed_form_concrete.pkl  out_dict_lli_vi_closed_form_synthetic.pkl  out_dict_lli_vi_closed_full_cov.pkl  out_dict_lli_vi_horseshoe.pkl  (+15 more)
(+2 files in other folders)
