[project]
name = "last-layer-inf"
version = "0.1.0"
description = ""
authors = [
    {name = "Clara Hoffmann",email = "claracharlotteh@web.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "blitz-bayesian-pytorch (>=0.2.8,<0.3.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
packages = [{include = "last_layer_inf", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
